# adt-set-of-integers

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: set_integers.h
src/: set_integers.c  set_integers.h  test.c
